plugins {
	id 'java'
	id 'org.springframework.boot' version '3.1.0'
	id 'io.spring.dependency-management' version '1.1.0'
}

configurations {
	all {
		exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
	}
}

group = 'com.testmart'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '20'

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	testImplementation 'junit:junit:4.13.1'
	testImplementation 'junit:junit:4.13.1'
	compileOnly 'org.projectlombok:lombok:1.18.26'
	annotationProcessor 'org.projectlombok:lombok:1.18.26'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'com.h2database:h2'
	implementation 'org.springframework.boot:spring-boot-starter-log4j2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.2.0'
	testImplementation 'org.junit.jupiter:junit-jupiter-params:5.2.0'
	testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
	testImplementation "org.mockito:mockito-core:2.+"
	testImplementation 'org.mockito:mockito-junit-jupiter:2.18.3'

}

tasks.named('test') {
	useJUnitPlatform()
}
